attempting to add layers, broken,

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -56,12 +56,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\renderer\layer\stack\layerStack.cpp" />
+    <ClCompile Include="src\renderer\layer\layer.cpp" />
     <ClCompile Include="src\renderer\gui\gui.cpp" />
     <ClCompile Include="src\renderer\opengl\opengl.cpp" />
     <ClCompile Include="src\log\log.cpp" />
     <ClCompile Include="src\app\app.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\renderer\layer\stack\layerStack.hpp" />
+    <ClInclude Include="src\renderer\layer\layer.hpp" />
     <ClInclude Include="src\renderer\events\appEvents.hpp" />
     <ClInclude Include="src\renderer\events\events.hpp" />
     <ClInclude Include="src\renderer\events\keyEvents.hpp" />
