--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -62,25 +62,25 @@
     <ClInclude Include="src\renderer\gui\gui.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\events\Events.hpp">
+    <ClInclude Include="src\renderer\Events\Events.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\renderer\renderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\events\AppEvents.hpp">
+    <ClInclude Include="src\renderer\Events\AppEvents.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\events\KeyEvents.hpp">
+    <ClInclude Include="src\renderer\Events\KeyEvents.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\events\MouseEvents.hpp">
+    <ClInclude Include="src\renderer\Events\MouseEvents.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\layer\Layer.hpp">
+    <ClInclude Include="src\renderer\Layer\Layer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\layer\stack\LayerStack.hpp">
+    <ClInclude Include="src\renderer\Layer\stack\LayerStack.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
