--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -62,19 +62,19 @@
     <ClInclude Include="src\renderer\gui\gui.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\Events\Events.hpp">
+    <ClInclude Include="src\renderer\events\events.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\renderer\renderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\Events\AppEvents.hpp">
+    <ClInclude Include="src\renderer\events\appEvents.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\Events\KeyEvents.hpp">
+    <ClInclude Include="src\renderer\events\keyEvents.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\Events\MouseEvents.hpp">
+    <ClInclude Include="src\renderer\events\mouseEvents.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
