--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,14 +1,13 @@
 [Window][Debug##Default]
-ViewportPos=944,526
-ViewportId=0x9F5F46A1
+Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=1428,812
+ViewportPos=823,477
 ViewportId=0x9B09816C
-Size=637,305
-Collapsed=0
+Size=512,222
+Collapsed=1
 
 [Docking][Data]
 
