--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,13 +1,73 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=109,143
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=915,488
-ViewportId=0x9B09816C
-Size=512,222
+ViewportPos=1310,390
+ViewportId=0xD4B39271
+Size=494,797
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][tasks]
+ViewportPos=603,537
+ViewportId=0x50586597
+Size=373,797
 Collapsed=0
 
+[Window][Dear ImGui Demo]
+ViewportPos=1310,390
+ViewportId=0xD4B39271
+Pos=496,0
+Size=1000,797
+Collapsed=0
+DockId=0x00000001,0
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=105
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=122
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=141
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0421
+Column 1  Weight=0.9564
+Column 2  Weight=1.0015
+
+[Table][0x2F21F5A6,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
+DockNode    ID=0x00000004 Pos=1310,390 Size=1496,797 Split=X
+  DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=494,222 Selected=0xAEDECFD1
+  DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1000,222 Selected=0xE87781F4
 
