attempting to add layers, broken again, will try later.

--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="src\renderer\gui\tasks\tasks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\renderer\layers\layers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\layers\stack\stack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app\app.hpp">
@@ -81,6 +87,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\renderer\gui\tasks\tasks.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\layers\layers.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\layers\stack\stack.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
