--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -56,13 +56,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\renderer\layers\layers.cpp" />
     <ClCompile Include="src\renderer\gui\gui.cpp" />
     <ClCompile Include="src\renderer\opengl\opengl.cpp" />
     <ClCompile Include="src\log\log.cpp" />
     <ClCompile Include="src\app\app.cpp" />
     <ClCompile Include="src\renderer\gui\tasks\tasks.cpp" />
+    <ClCompile Include="src\renderer\layers\stack\stack.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\renderer\layers\layers.hpp" />
     <ClInclude Include="src\renderer\events\appEvents.hpp" />
     <ClInclude Include="src\renderer\events\events.hpp" />
     <ClInclude Include="src\renderer\events\keyEvents.hpp" />
@@ -80,6 +83,7 @@
     <ClInclude Include="src\platform\windows\WindowsWindow.hpp" />
     <ClInclude Include="src\renderer\renderer.hpp" />
     <ClInclude Include="src\renderer\gui\tasks\tasks.hpp" />
+    <ClInclude Include="src\renderer\layers\stack\stack.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
