--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,15 +1,13 @@
 [Window][Debug##Default]
-ViewportPos=109,143
-ViewportId=0x9F5F46A1
+Pos=4,9
 Size=400,400
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=1310,390
-ViewportId=0xD4B39271
-Size=494,797
+ViewportPos=419,170
+ViewportId=0x9B09816C
+Size=1496,797
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][tasks]
 ViewportPos=603,537
@@ -18,12 +16,10 @@ Size=373,797
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1310,390
-ViewportId=0xD4B39271
-Pos=496,0
+ViewportPos=527,271
+ViewportId=0xE927CF2F
 Size=1000,797
 Collapsed=0
-DockId=0x00000001,0
 
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000
@@ -67,7 +63,4 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockNode    ID=0x00000004 Pos=1310,390 Size=1496,797 Split=X
-  DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=494,222 Selected=0xAEDECFD1
-  DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1000,222 Selected=0xE87781F4
 
