--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,21 +4,21 @@ Size=400,400
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=419,170
+ViewportPos=769,182
 ViewportId=0x9B09816C
-Size=1496,797
+Size=894,513
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=603,537
+ViewportPos=879,99
 ViewportId=0x50586597
 Size=373,797
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=527,271
+ViewportPos=898,161
 ViewportId=0xE927CF2F
-Size=1000,797
+Size=933,596
 Collapsed=0
 
 [Table][0x861D378E,3]
@@ -59,8 +59,16 @@ Column 1  Weight=0.9564
 Column 2  Weight=1.0015
 
 [Table][0x2F21F5A6,2]
+Column 0  Weight=1.5247
+Column 1  Weight=0.4753
+
+[Table][0x5E4D755C,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
+
+[Table][0x97123C78,2]
+Column 0  Weight=0.9882
+Column 1  Weight=1.0118
 
 [Docking][Data]
 
