--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=165,255
+ViewportPos=291,744
 ViewportId=0xA4D966FE
 Pos=762,0
 Size=482,646
@@ -12,13 +12,13 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][tasks]
-ViewportPos=730,298
+ViewportPos=960,244
 ViewportId=0x50586597
-Size=740,545
+Size=755,604
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=165,255
+ViewportPos=291,744
 ViewportId=0xA4D966FE
 Size=760,646
 Collapsed=0
@@ -66,15 +66,19 @@ Column 0  Weight=1.5247
 Column 1  Weight=0.4753
 
 [Table][0x5E4D755C,2]
-Column 0  Weight=1.5110
-Column 1  Weight=0.4890
+Column 0  Weight=1.6459
+Column 1  Weight=0.3541
 
 [Table][0x97123C78,2]
-Column 0  Weight=1.0169
-Column 1  Weight=0.9831
+Column 0  Weight=1.7833
+Column 1  Weight=0.2167
+
+[Table][0xE78CC2C6,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=165,255 Size=1244,646 Split=X
+DockNode    ID=0x00000001 Pos=291,744 Size=1244,646 Split=X
   DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=760,762 Selected=0xE87781F4
   DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=482,762 Selected=0xAEDECFD1
 
