--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -43,7 +43,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;BUILD_DLL;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)dependencies/imgui/src;$(SolutionDir)dependencies/glfw/includes;$(SolutionDir)dependencies/glad/includes/;$(ProjectDir)includes;$(ProjectDir)src;$(SolutionDir)vendor/spdlog/include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies/imgui/src;$(SolutionDir)dependencies/glfw/includes;$(SolutionDir)dependencies/glad/includes/;$(SolutionDir)engine/includes;$(SolutionDir)engine/src;$(SolutionDir);$(SolutionDir)vendor/spdlog/include;$(SolutionDir)hack/includes/;$(SolutionDir)hack/src/</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>enpch.hpp</PrecompiledHeaderFile>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
@@ -53,12 +53,11 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>dxd11x.lib;opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\renderer\gui\gui.cpp" />
-    <ClCompile Include="src\renderer\gui\tasks\tasks.cpp" />
     <ClCompile Include="src\renderer\opengl\opengl.cpp" />
     <ClCompile Include="src\log\log.cpp" />
     <ClCompile Include="src\app\app.cpp" />
@@ -74,7 +73,6 @@
     <ClInclude Include="includes\core.h" />
     <ClInclude Include="includes\engine.h" />
     <ClInclude Include="includes\window.hpp" />
-    <ClInclude Include="src\renderer\gui\tasks\tasks.hpp" />
     <ClInclude Include="src\renderer\opengl\opengl.hpp" />
     <ClInclude Include="src\app\app.hpp" />
     <ClInclude Include="src\entry.h" />
@@ -94,6 +92,9 @@
     </ProjectReference>
     <ProjectReference Include="..\dependencies\imgui\imgui.vcxproj">
       <Project>{d3531510-74a8-4540-8ea5-71b216bb8248}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\hack\hack.vcxproj">
+      <Project>{588170e3-64c2-4221-b4ab-05aa809eca16}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
