--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -8,9 +8,8 @@ Size=700,500
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=291,744
-ViewportId=0xA4D966FE
-Pos=762,0
+ViewportPos=1229,332
+ViewportId=0x9B09816C
 Size=482,646
 Collapsed=0
 
@@ -21,13 +20,10 @@ Size=755,604
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=291,744
-ViewportId=0xA4D966FE
+ViewportPos=639,328
+ViewportId=0xE927CF2F
 Size=760,646
 Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=291,744 Size=1244,646 Split=X
-  DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=760,762 Selected=0xE87781F4
-  DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=482,762 Selected=0xAEDECFD1
 
