--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -8,22 +8,36 @@ Size=700,500
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=1229,332
-ViewportId=0x9B09816C
-Size=482,646
+ViewportPos=482,317
+ViewportId=0xA4D966FE
+Pos=491,0
+Size=264,604
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][tasks]
-ViewportPos=960,244
-ViewportId=0x50586597
-Size=755,604
+ViewportPos=482,317
+ViewportId=0xA4D966FE
+Size=489,604
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=639,328
+ViewportPos=1562,178
 ViewportId=0xE927CF2F
 Size=760,646
 Collapsed=0
 
+[Table][0x4CC01522,2]
+Column 0  Weight=0.8611
+Column 1  Weight=1.1389
+
+[Table][0xBE7E99DC,2]
+Column 0  Weight=1.8361
+Column 1  Weight=0.1639
+
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=482,317 Size=755,604 Split=X Selected=0xAEDECFD1
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=489,604 Selected=0xFE445126
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=264,604 Selected=0xAEDECFD1
 
