--- a/hack/hack.vcxproj
+++ b/hack/hack.vcxproj
@@ -9,13 +9,13 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bdaab12e-56e2-4d25-a04a-269170ea339c}</ProjectGuid>
-    <RootNamespace>engine</RootNamespace>
+    <ProjectGuid>{5c1deca5-9573-411f-9f6d-e890ac0998a3}</ProjectGuid>
+    <RootNamespace>hack</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -31,7 +31,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)bin\$(Configuration)\~$(Platform)\engine\</OutDir>
+    <OutDir>$(SolutionDir)bin\$(Configuration)\~$(Platform)\$(ProjectName)\</OutDir>
     <IntDir>$(SolutionDir)bin-int\$(Configuration)\~$(Platform)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -40,65 +40,28 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;BUILD_DLL;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;BUILD_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)dependencies/imgui/src;$(SolutionDir)dependencies/glfw/includes;$(SolutionDir)dependencies/glad/includes/;$(SolutionDir)engine/includes;$(SolutionDir)engine/src;$(SolutionDir);$(SolutionDir)vendor/spdlog/include;</AdditionalIncludeDirectories>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PrecompiledHeaderFile>enpch.hpp</PrecompiledHeaderFile>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <AdditionalIncludeDirectories>$(SolutionDir)dependencies/imgui/src;$(SolutionDir)dependencies/glfw/includes;$(SolutionDir)dependencies/glad/includes/;$(SolutionDir)engine/includes;$(SolutionDir)engine/src;$(SolutionDir);$(SolutionDir)vendor/spdlog/include;$(SolutionDir)hack/includes/;$(SolutionDir)hack/src/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\hack\hack.cpp" />
     <ClCompile Include="src\hack\process\proc.cpp" />
+    <ClCompile Include="src\hack\hack.cpp" />
     <ClCompile Include="src\hack\tasks\tasks.cpp" />
-    <ClCompile Include="src\renderer\gui\gui.cpp" />
-    <ClCompile Include="src\renderer\opengl\opengl.cpp" />
-    <ClCompile Include="src\log\log.cpp" />
-    <ClCompile Include="src\app\app.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\hack\hack.hpp" />
+    <ClInclude Include="includes\hack.h" />
     <ClInclude Include="src\hack\process\proc.hpp" />
+    <ClInclude Include="src\hack\hack.hpp" />
     <ClInclude Include="src\hack\tasks\tasks.hpp" />
-    <ClInclude Include="src\renderer\events\appEvents.hpp" />
-    <ClInclude Include="src\renderer\events\events.hpp" />
-    <ClInclude Include="src\renderer\events\keyEvents.hpp" />
-    <ClInclude Include="src\renderer\events\mouseEvents.hpp" />
-    <ClInclude Include="src\renderer\gui\gui.hpp" />
-    <ClInclude Include="includes\enpch.hpp" />
-    <ClInclude Include="includes\common.hpp" />
-    <ClInclude Include="includes\core.h" />
-    <ClInclude Include="includes\engine.h" />
-    <ClInclude Include="includes\window.hpp" />
-    <ClInclude Include="src\renderer\opengl\opengl.hpp" />
-    <ClInclude Include="src\app\app.hpp" />
-    <ClInclude Include="src\entry.h" />
-    <ClInclude Include="src\log\log.hpp" />
-    <ClInclude Include="src\platform\windows\WindowsWindow.hpp" />
-    <ClInclude Include="src\renderer\renderer.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cpp.hint" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\dependencies\glad\glad.vcxproj">
-      <Project>{68349c45-a697-4267-8b55-c2e36aa6f5cb}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\dependencies\glfw\glfw.vcxproj">
-      <Project>{77faaae7-4d51-4b59-9294-4181a3630652}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\dependencies\imgui\imgui.vcxproj">
-      <Project>{d3531510-74a8-4540-8ea5-71b216bb8248}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
