working read write, open process, very nice, hack working, fixing other bugs in gui

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,43 +1,31 @@
+[Window][Dear ImGui Demo]
+Pos=113,74
+Size=328,309
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dockspace]
-Size=700,500
+[Window][tasks]
+ViewportPos=294,309
+ViewportId=0x50586597
+Size=1005,531
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=482,317
-ViewportId=0xA4D966FE
-Pos=491,0
-Size=264,604
-Collapsed=0
-DockId=0x00000003,0
+Pos=0,0
+Size=700,500
+Collapsed=1
 
-[Window][tasks]
-ViewportPos=482,317
-ViewportId=0xA4D966FE
-Size=489,604
-Collapsed=0
-DockId=0x00000002,0
+[Table][0x652F3F2A,2]
+Column 0  Weight=1.2896
+Column 1  Weight=0.7104
 
-[Window][Dear ImGui Demo]
-ViewportPos=1562,178
-ViewportId=0xE927CF2F
-Size=760,646
-Collapsed=0
-
-[Table][0x4CC01522,2]
-Column 0  Weight=0.8611
-Column 1  Weight=1.1389
-
-[Table][0xBE7E99DC,2]
-Column 0  Weight=1.8361
-Column 1  Weight=0.1639
+[Table][0xEC06AE55,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=482,317 Size=755,604 Split=X Selected=0xAEDECFD1
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=489,604 Selected=0xFE445126
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=264,604 Selected=0xAEDECFD1
 
