--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dear ImGui Demo]
-Pos=113,74
-Size=328,309
+Pos=85,17
+Size=515,455
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,9 +9,9 @@ Size=400,400
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=294,309
+ViewportPos=901,198
 ViewportId=0x50586597
-Size=1005,531
+Size=962,740
 Collapsed=0
 
 [Window][yoo]
@@ -26,6 +26,10 @@ Column 1  Weight=0.7104
 [Table][0xEC06AE55,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
+
+[Table][0xFAF85941,2]
+Column 0  Weight=1.6539
+Column 1  Weight=0.3461
 
 [Docking][Data]
 
