--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=901,198
+ViewportPos=663,116
 ViewportId=0x50586597
 Size=962,740
 Collapsed=0
@@ -30,6 +30,10 @@ Column 1  Weight=1.0000
 [Table][0xFAF85941,2]
 Column 0  Weight=1.6539
 Column 1  Weight=0.3461
+
+[Table][0x4CC01522,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Docking][Data]
 
