--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,7 +1,8 @@
 [Window][Dear ImGui Demo]
-Pos=85,17
-Size=515,455
+Pos=395,67
+Size=268,384
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -9,15 +10,16 @@ Size=400,400
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=665,116
+ViewportPos=1116,61
 ViewportId=0x50586597
 Size=962,740
 Collapsed=0
 
 [Window][yoo]
-Pos=0,0
-Size=700,500
-Collapsed=1
+Pos=130,67
+Size=263,384
+Collapsed=0
+DockId=0x00000002,0
 
 [Table][0x652F3F2A,2]
 Column 0  Weight=1.2896
@@ -36,4 +38,7 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=171,137 Size=533,384 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=346,500 Selected=0xAEDECFD1
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=352,500 Selected=0xE87781F4
 
