small fixes to displaying "failed to attach window", removed debug try catch.

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,6 +1,8 @@
 [Window][Dear ImGui Demo]
-Pos=395,67
-Size=268,384
+ViewportPos=176,251
+ViewportId=0xA4D966FE
+Pos=260,0
+Size=318,426
 Collapsed=0
 DockId=0x00000003,0
 
@@ -10,14 +12,15 @@ Size=400,400
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=1116,61
+ViewportPos=816,135
 ViewportId=0x50586597
-Size=962,740
+Size=1062,740
 Collapsed=0
 
 [Window][yoo]
-Pos=130,67
-Size=263,384
+ViewportPos=176,251
+ViewportId=0xA4D966FE
+Size=258,426
 Collapsed=0
 DockId=0x00000002,0
 
@@ -30,15 +33,15 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xFAF85941,2]
-Column 0  Weight=1.6539
-Column 1  Weight=0.3461
+Column 0  Weight=1.4879
+Column 1  Weight=0.5121
 
 [Table][0x4CC01522,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=171,137 Size=533,384 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=346,500 Selected=0xAEDECFD1
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=352,500 Selected=0xE87781F4
+DockNode    ID=0x00000001 Pos=176,251 Size=578,426 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=238,500 Selected=0xAEDECFD1
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=293,500 Selected=0xE87781F4
 
