attempting to add signature scanning system, got one last error

--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\hack\hack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\hack\process\signature\signature.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app\app.hpp">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\hack\hack.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\hack\process\signature\signature.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
