--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -57,6 +57,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\hack\process\signature\signature.cpp" />
     <ClCompile Include="src\hack\hack.cpp" />
     <ClCompile Include="src\hack\process\proc.cpp" />
     <ClCompile Include="src\hack\tasks\tasks.cpp" />
@@ -66,6 +67,7 @@
     <ClCompile Include="src\app\app.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\hack\process\signature\signature.hpp" />
     <ClInclude Include="src\hack\hack.hpp" />
     <ClInclude Include="src\hack\process\proc.hpp" />
     <ClInclude Include="src\hack\tasks\tasks.hpp" />
