commented out signature code for main to compile, added remove button to memory access points

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,5 +1,7 @@
 [Window][Dear ImGui Demo]
-Pos=403,61
+ViewportPos=379,581
+ViewportId=0xA4D966FE
+Pos=291,0
 Size=287,426
 Collapsed=0
 DockId=0x00000003,0
@@ -10,13 +12,14 @@ Size=400,400
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=837,297
+ViewportPos=939,441
 ViewportId=0x50586597
 Size=1062,740
 Collapsed=0
 
 [Window][yoo]
-Pos=112,61
+ViewportPos=379,581
+ViewportId=0xA4D966FE
 Size=289,426
 Collapsed=0
 DockId=0x00000002,0
