--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -1,8 +1,8 @@
 [Window][Dear ImGui Demo]
-ViewportPos=379,581
+ViewportPos=275,281
 ViewportId=0xA4D966FE
-Pos=291,0
-Size=287,426
+Pos=426,0
+Size=421,688
 Collapsed=0
 DockId=0x00000003,0
 
@@ -12,15 +12,15 @@ Size=400,400
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=939,441
+ViewportPos=783,306
 ViewportId=0x50586597
-Size=1062,740
+Size=1289,790
 Collapsed=0
 
 [Window][yoo]
-ViewportPos=379,581
+ViewportPos=275,281
 ViewportId=0xA4D966FE
-Size=289,426
+Size=424,688
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,8 +40,92 @@ Column 1  Weight=0.5121
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=42
+Column 3  Weight=1.0000
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=379,581 Size=578,426 Split=X
+DockNode    ID=0x00000001 Pos=275,281 Size=847,688 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=289,426 Selected=0xAEDECFD1
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=287,426 Selected=0xE87781F4
 
